--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,8 +1,3 @@
-
-<div class="center">
-  <h1>
-    Dating App
-  </h1>
-  <app-value></app-value>
-</div>
+<app-nav></app-nav>
+<app-home></app-home>
 <!-- <router-outlet></router-outlet> -->
